# Field_SFA

./: .gitignore  README.md  build.json  hooks.py  modules.txt  package-lock.json  package.json  patches.txt  pyproject.toml  vite.config.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  frappe.js  index.css  main.js  router.js
frontend/src/composables/: useDateRange.js  (+1 more)
public/: node_modules  sfa_desk.bundle.js
sfa_core/: hooks.py  modules.txt  patches.txt
sfa_core/api/: attendance.py  auth.py  beat_plans.py  customer.py  dashboard.py  expenses.py  forms.py  gamification.py  hr_common.py  leads.py  leave.py  leave_validation.py  list.py  maps.py  order.py  payment.py  rep_profile.py  reports.py  saved_location.py  settings.py  sync.py  targets.py  territory_dashboard.py  utils.py
sfa_core/doc_events/: amendment.py  customer.py  field_activity.py  form_response.py  payment.py  sales_order.py  visit.py
sfa_core/field_sfa/: boot.py
sfa_core/install/: after_install.py
sfa_core/public/: sfa_core.bundle.css  sfa_desk.bundle.js
sfa_core/sfa_core/: boot.py
sfa_core/utils/: gamification.py  scheduler.py
sfa_core/www/: app.py  login.html  login.py  sfa.html  sfa.py
src/: main.js
src/components/: DataTable.vue  MapView.vue  MetricCard.vue  RepActivityCard.vue  TimelineFeed.vue  VisitCard.vue
src/composables/: useFrappe.js
src/pages/: FormTemplates.vue  SFADashboard.vue  VisitsList.vue
src/styles/: main.scss  variables.scss
src/surveyjs/: SurveyCreator.vue  customQuestions.js
(+338 files in other folders)
