[project]
name = "sfa_core"
authors = [
    { name = "Hema Beverages", email = "tech@hemabeverages.com"}
]
description = "Sales Force Automation Platform for Hema Beverages"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=15.0.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[project.urls]
Homepage = "https://github.com/hemabeverages/sfa_core"
Repository = "https://github.com/hemabeverages/sfa_core.git"
