[project]
name = "sfa_core"
version = "0.0.1"
description = "Sales Force Automation Platform for Hema Beverages"
requires-python = ">=3.10"
dependencies = ["frappe>=15.0.0"]

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sfa_core*"]
